sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:5: error: Invalid literal number
  appliquer l algorithme de tri par insertion en comparant i-ecart et i, puis i-2ecart et i-ecart, puis i-3ecart et i-2ecart, etc.
                                                                                ^AlgShellSort:5: error: Invalid literal number
  appliquer l algorithme de tri par insertion en comparant i-ecart et i, puis i-2ecart et i-ecart, puis i-3ecart et i-2ecart, etc.
                                                                                                          ^AlgShellSort:5: error: Invalid literal number
  appliquer l algorithme de tri par insertion en comparant i-ecart et i, puis i-2ecart et i-ecart, puis i-3ecart et i-2ecart, etc.
                                                                                                                      ^AlgShellSort:5: error: identifier expected but ',' found.
  appliquer l algorithme de tri par insertion en comparant i-ecart et i, puis i-2ecart et i-ecart, puis i-3ecart et i-2ecart, etc.
                                                                       ^